# toile

./: package.json
apps/desktop/src/: app.css
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/lib/: autoheight.ts  board.svelte.ts  drawing.svelte.ts  segments.ts
apps/desktop/src/lib/components/: Grid.svelte  LinkCard.svelte  PasteMenu.svelte  Postit.svelte  ResizeHandles.svelte  SizeControls.svelte  TextBlock.svelte  VideoPlayer.svelte
apps/desktop/src/routes/: +page.svelte
apps/web/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/lib/: markdown.ts
src/lib/components/: AssetTile.svelte  AudioPlayer.svelte  Lightbox.svelte  LinkCard.svelte  Minimap.svelte  Postit.svelte  VideoPlayer.svelte  ZoomControls.svelte
src/routes/: +page.svelte
