[package]
name = "toile"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "toile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
notify = "6"
dirs = "5"
tauri-plugin-clipboard-manager = "2.3.2"
scraper = "0.27.0"
url = "2.5.8"
tokio = { version = "1.52.3", features = ["rt"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "gzip", "brotli", "json", "charset", "http2"] }
tiny_http = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-web-kit = { version = "0.3", features = [
    "WKWebView",
    "WKWebViewConfiguration",
    "WKPreferences",
] }

